--- a/portuguese-pt (v1.1).ini
+++ b/portuguese-pt (v1.1).ini
@@ -1,6 +1,6 @@
 ﻿[Header]
 Language = "Português (PT)"
-Author = "Pedro Soares (Kazemaru)"
+Author = "peachflavored"
 
 [Title]
 ControllerRecommended = "RECOMENDA-SE O USO DE COMANDO"
